# dolle-iot

./: .gitignore  README.md
dolle-iot/: CMakeLists.txt  package.xml
limcheck/: CMakeLists.txt  package.xml  qtdep.txt
limcheck/include/: camera.h  dolle_vision.h  gpio.h  limcheck.h  recording.h  yolo_v5.h
limcheck/launch/: gather_data.launch.py  gpio_test.py  limcheck.launch.py
limcheck/msg/: CleaningStamp.msg  ImagePos.msg  ObjectPos.msg
limcheck/src/: camera.cpp  gpioTest.cpp  limcheck.cpp  saveData.cpp  sort_data.cpp
limcheck/src/gui/: Content.qml  Footer.qml  GlueTimer.qml  Header.qml  PieCharts.qml  asd  main.cpp  main.qml  qml.qrc
limcheck/src/gui/include/: DolleBranding.js  ros_functions.h  timer.js
limcheck/srv/: StopSignal.srv
snap/: snapcraft.yaml
snap/gui/: limcheck-gather-data.desktop  limcheck-gui.desktop
vision/: CMakeLists.txt  package.xml
vision/include/: YOLOv5.h  limcheck.h  terminal-msgs.h
vision/launch/: limcheck.launch.py
vision/src/: camera.cpp
